--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Porson Lee Portfolio</title>
+    <title>Porson Lee</title>
     <style>
       *{
         font-family: 'Roboto', sans-serif;
