--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content=""
     />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
